update(): 添加子路由

--- a/src/assets/styles/common/reset.less
+++ b/src/assets/styles/common/reset.less
@@ -375,6 +375,10 @@ body {
   cursor: not-allowed;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 .svg-icon {
   width: 24px;
   height: 24px;
@@ -394,17 +398,5 @@ body {
   p {
     margin-top: 10px;
     font-size: 14px;
-  }
-}
-
-.page {
-  padding-top: 64px;
-
-  .wrapper-content-padding {
-    padding: 24px 0;
-  }
-
-  .wrapper-content-padding-all {
-    padding: 24px;
   }
 }
