a(): 添加 wasm 支持

--- a/src/assets/styles/common/reset.less
+++ b/src/assets/styles/common/reset.less
@@ -400,3 +400,51 @@ body {
     font-size: 14px;
   }
 }
+
+.page-padding {
+  padding: 24px;
+}
+
+.page-padding-top {
+  padding-top: 24px;
+}
+
+.page-padding-bottom {
+  padding-bottom: 24px;
+}
+
+.page-padding-left {
+  padding-left: 24px;
+}
+
+.page-padding-right {
+  padding-right: 24px;
+}
+
+.page-margin-top {
+  margin-top: 20px;
+}
+
+.page-margin-bottom {
+  margin-bottom: 20px;
+}
+
+.page-margin-left {
+  margin-left: 20px;
+}
+
+.page-margin-right {
+  margin-right: 20px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.font-bold {
+  font-weight: bold;
+}
+
+.page-white {
+  background: #ffffff !important;
+}
