update(): 修改代码提交勾子

--- a/src/assets/styles/common/reset.less
+++ b/src/assets/styles/common/reset.less
@@ -97,7 +97,12 @@ html {
 body {
   width: 100%;
   height: 100%;
-  font-family: PingFangSC-Regular, PingFang SC, '微软雅黑', 'Microsoft YaHei', sans-serif;
+  font-family:
+    PingFangSC-Regular,
+    PingFang SC,
+    '微软雅黑',
+    'Microsoft YaHei',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   color: #333333;
 }
@@ -445,6 +450,6 @@ body {
   font-weight: bold;
 }
 
-.page-white        {
+.page-white {
   background: #ffffff !important;
 }
