--- a/src/assets/styles/common/antd.less
+++ b/src/assets/styles/common/antd.less
@@ -1,403 +1,229 @@
 /**
- * @fileOverview antd
+ * @fileOverview antd, 阿里样式需要统一设置为 m-ant 开头
  * @date 2023-4-19
  * @author poohlaha
  */
-// alert
-.ant-alert {
-  border-radius: 0;
-}
-
-// button
-.ant-button {
-  &.ant-btn-default:hover {
-    border: 1px solid @theme!important;
-    color: @theme!important;
+// input
+.m-ant-input,
+.m-ant-input-icon {
+  .ant-input-prefix svg {
+    color: @color_svg;
   }
-}
 
-// modal
-.ant-modal-root {
-  z-index: 99;
-  position: relative;
+  .ant-input-suffix {
+    .anticon-eye svg {
+      path:not(:nth-child(2)) {
+        fill: @theme!important;
+      }
 
-  .ant-modal-header {
-    background: transparent !important;
-
-    .ant-modal-title {
-      color: @color!important;
+      path:nth-child(2) {
+        fill: none !important;
+      }
     }
   }
 
-  .ant-modal-content {
-    background: @background_card!important;
+  &.ant-input-outlined:hover,
+  &.ant-input-outlined:focus-within {
+    border-color: @theme;
+    box-shadow: unset;
+  }
+}
 
-    .ant-input,
-    .ant-input-password {
-      background: @background_card!important;
+// menu
+.m-ant-menu {
+  border-inline-end: unset !important;
+
+  .ant-menu-sub.ant-menu-inline {
+    background: unset !important;
+  }
+
+  .ant-menu-submenu-title:active {
+    background: @theme_to;
+  }
+
+  .ant-menu-submenu-title:not(.ant-menu-item-disabled):focus-visible {
+    outline: unset !important;
+  }
+
+  .ant-menu-submenu-selected > .ant-menu-submenu-title {
+    color: @theme;
+  }
+
+  .ant-menu-item-only-child {
+    outline: unset !important;
+    outline-offset: 0 !important;
+  }
+
+  .ant-menu-item:not(.ant-menu-item-selected):active {
+    background: @theme_to!important;
+  }
+
+  .ant-menu-item-selected {
+    background: @theme;
+    color: #ffffff;
+  }
+}
+
+// pagination
+.m-ant-pagination {
+  .ant-pagination-item-active {
+    border-color: @theme;
+
+    a {
+      color: @theme;
     }
+  }
 
-    .ant-modal-close-x {
-      color: @color!important;
-    }
+  .ant-pagination-total-text {
+    display: flex;
+    align-items: center;
+  }
 
-    .ant-input-password {
-      .ant-input-suffix {
-        .ant-input-password-icon {
-          color: @color!important;
-        }
-      }
-    }
-
-    .ant-modal-footer {
-      .ant-btn-default {
-        background: @background!important;
-        color: @color!important;
-        border: @border!important;
-
-        &:hover {
-          border: 1px solid @theme!important;
-          color: @theme!important;
-        }
-      }
-
-      .ant-btn-primary {
-        background-color: @theme;
-        box-shadow: unset !important;
-      }
+  .ant-pagination-jump-next,
+  .ant-pagination-jump-prev {
+    .ant-pagination-item-link-icon {
+      color: @theme;
     }
   }
 }
 
 // select
-.ant-select {
-  &:hover,
-  &.ant-select-open,
-  &.ant-select-focused {
+.m-ant-select,
+.m-ant-pagination .ant-select {
+  &:not(.ant-select-disabled):hover {
     .ant-select-selector {
       border-color: @theme!important;
-      box-shadow: 0 0 0 2px @theme_to!important;
     }
   }
 
-  .ant-select-selector {
-    height: 100% !important;
-
-    .ant-select-selection-item {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  }
-}
-
-.ant-select-dropdown {
-  .rc-virtual-list {
-    .ant-select-item-option-selected {
-      background: @theme;
-      color: @color_border_gray;
-    }
-
-    .ant-select-item-option-content {
-      white-space: pre-wrap;
-    }
-  }
-}
-
-// input search
-.search {
-  border-radius: 0 !important;
-  height: 32px;
-  font-weight: 700;
-  background: transparent;
-  width: 100%;
-  border-bottom: @border;
-  border-top: unset;
-  border-left: unset;
-  border-right: unset;
-  box-shadow: unset;
-  border-bottom: @border;
-}
-
-// input
-.ant-input {
-  color: @color_gray_lighter !important;
-
-  &:hover {
-    border: 1px solid @theme!important;
-  }
-
-  &:focus {
-    border: 1px solid @theme!important;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1) !important;
-  }
-}
-
-.ant-input-affix-wrapper {
-  &:hover {
-    border-color: @theme!important;
-  }
-
-  &:focus,
-  &:focus-visible,
-  &.ant-input-affix-wrapper-focused {
-    border: 1px solid @theme!important;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1) !important;
-  }
-
-  input {
-    color: @color!important;
-  }
-
-  .ant-input-suffix {
-    .ant-input-clear-icon {
-      color: @color!important;
-    }
-  }
-}
-
-*::-webkit-input-placeholder,
-&::-webkit-input-placeholder {
-  color: @color_gray_light!important;
-}
-
-*:-moz-placeholder,
-&:-moz-placeholder {
-  /* FF 4-18 */
-  color: @color_gray_light!important;
-}
-
-*::-moz-placeholder,
-&::-moz-placeholder {
-  /* FF 19+ */
-  color: @color_gray_light!important;
-}
-
-*:-ms-input-placeholder,
-&:-ms-input-placeholder {
-  /* IE 10+ */
-  color: @color_gray_light!important;
-}
-
-.ant-message {
-  .ant-message-notice-content {
-    border-radius: 24px !important;
-    padding: 10px 20px;
-  }
-}
-
-.ant-menu {
-  &.ant-menu-submenu {
-    .ant-menu-item-selected {
-      background-color: @color_menu_active!important;
-      color: @color!important;
-    }
-  }
-}
-
-.ant-pagination {
-  .ant-pagination-item {
-    &.ant-pagination-item-active {
+  &.ant-select-focused:not(.ant-select-disabled) {
+    .ant-select-selector {
       border-color: @theme!important;
-
-      a {
-        color: @theme!important;
-      }
-    }
-  }
-
-  .ant-pagination-jump-next,
-  .ant-pagination-jump-prev {
-    &:hover {
-      .ant-pagination-item-link-icon {
-        color: @theme!important;
-      }
-    }
-  }
-}
-
-// ant-steps
-.ant-steps {
-  .ant-steps-item-icon {
-    width: 22px;
-    height: 22px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: unset;
-  }
-
-  .ant-steps-item-content {
-    .ant-steps-item-title {
-      font-size: @font_large;
-    }
-  }
-
-  .ant-steps-item-tail {
-    top: 6px !important;
-
-    &::after {
-      height: 4px;
-    }
-  }
-
-  .ant-steps-item-finish {
-    .ant-steps-item-icon {
-      border: 2px solid @color_green;
-    }
-
-    .ant-steps-item-tail {
-      &::after {
-        background-color: @color_green;
-      }
-    }
-
-    .ant-steps-icon svg {
-      width: 12px;
-      height: 12px;
-    }
-  }
-
-  .ant-steps-item-finish:not(.ant-steps-next-error) {
-    .ant-steps-icon svg {
-      color: @color_green;
-    }
-  }
-
-  .ant-steps-item-finish {
-    .ant-steps-item-icon {
-      background: #ffffff !important;
-      border: 2px solid @color_green!important;
-    }
-
-    .ant-steps-finish-icon {
-    }
-  }
-
-  .ant-steps-next-error {
-    .ant-steps-item-tail {
-      &::after {
-        background-color: #f5222d !important;
-      }
-    }
-  }
-
-  .ant-steps-item-error {
-    .ant-steps-icon svg {
-      color: #f5222d;
-    }
-
-    .ant-steps-item-icon {
-      background: #ffffff !important;
-      border: 2px solid #f5222d !important;
-    }
-  }
-
-  .ant-steps-item-active {
-    .ant-steps-item-icon {
-      border: unset;
-      background-color: @color_green;
-
-      .ant-steps-icon {
-        color: #ffffff;
-        font-weight: 700;
-      }
-    }
-
-    .ant-steps-item-tail {
-      &::after {
-        background-color: rgba(0, 0, 0, 0.06) !important;
-      }
-    }
-  }
-
-  .ant-steps-item-wait {
-    .ant-steps-item-icon {
-      border: 2px solid rgba(0, 0, 0, 0.4);
-      background-color: unset;
-
-      .ant-steps-icon {
-        color: @color_gray_lightest;
-        font-weight: 700;
-      }
-    }
-
-    .ant-steps-item-content {
-      .ant-steps-item-title {
-        color: rgba(0, 0, 0, 0.4) !important;
-      }
-    }
-  }
-}
-
-// ant-modal
-.ant-modal-root {
-  .ant-modal-body .ant-modal-confirm-btns,
-  .ant-modal-footer {
-    .ant-btn-primary,
-    .ant-btn-default {
-      border-radius: 16px;
-      width: 60px;
-      height: 32px;
-    }
-
-    .ant-btn-primary {
-      background: @theme;
       box-shadow: unset !important;
     }
-
-    .ant-btn-primary:hover {
-      background: @theme_hover;
-    }
-
-    .ant-btn-default:hover {
-      border-color: @theme_hover;
-      color: @theme_hover;
-    }
-  }
-}
-
-// ant-popover
-.ant-popover {
-  .ant-popover-inner {
-    padding: 0;
   }
 
-  .message-box {
-    width: 400px;
-    height: 512px;
-
-    .message-title {
-      height: 48px;
-      padding: 0 20px;
-      color: @theme;
-      font-size: @font;
-      line-height: 22px;
-      font-weight: 400;
-
-      .read.disabled {
-        color: rgba(0, 0, 0, 0.25);
-        cursor: not-allowed !important;
-      }
-
-      .svg-box {
-        width: 16px;
-        height: 16px;
+  &.ant-select-dropdown,
+  .ant-select-dropdown {
+    .rc-virtual-list {
+      .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
+        background-color: @theme_to;
       }
     }
   }
 }
 
-// ant-tooltip
-.ant-tooltip {
-  &.tooltip-white {
-    .ant-tooltip-content {
-      .ant-tooltip-inner {
-        background: #ffffff;
-        font-size: @font;
-        color: @color_gray_lighter;
-        line-height: 22px;
-        padding: 5px 8px;
+// button
+.m-ant-button,
+.m-ant-modal .ant-modal-footer button {
+  &:not(.disabled).ant-btn-primary,
+  &:not(.disabled).ant-btn-primary:hover {
+    background: @theme;
+    box-shadow: unset !important;
+  }
+
+  &:not(.disabled).ant-btn-default:hover {
+    border-color: @theme;
+    box-shadow: unset !important;
+    color: @theme;
+  }
+}
+
+// table
+.m-ant-table {
+  .ant-table-thead .ant-table-cell {
+    background: @background_table_head!important;
+  }
+
+  .ant-table-tbody {
+    tr {
+      cursor: pointer;
+    }
+
+    .ant-table-cell {
+      button.ant-table-row-expand-icon {
+        &:hover,
+        &:focus-within,
+        &:focus {
+          border-color: @theme;
+          color: @theme;
+        }
+      }
+    }
+  }
+}
+
+.m-ant-modal {
+  .ant-modal-content {
+    padding: 0 !important;
+
+    .ant-modal-header {
+      padding: 20px 24px 0 24px;
+    }
+
+    .ant-modal-body {
+      padding: 20px 24px;
+      max-height: 500px;
+      overflow-y: auto;
+      overflow-x: hidden;
+    }
+
+    .ant-modal-footer {
+      padding: 20px 24px;
+    }
+  }
+}
+
+// datepicker range
+.m-ant-picker-range {
+  &:hover,
+  &:focus,
+  &:focus-within {
+    border-color: @theme;
+  }
+
+  .ant-picker-active-bar {
+    background: @theme;
+  }
+}
+
+// datepicker dropdown
+.m-ant-picker-dropdown {
+  .ant-picker-date-panel,
+  .ant-picker-year-panel,
+  .ant-picker-month-panel {
+    .ant-picker-cell-today {
+      .ant-picker-cell-inner {
+        &:before {
+          border: @border_theme!important;
+        }
+      }
+    }
+
+    .ant-picker-header-view {
+      button {
+        &:hover {
+          color: @theme;
+        }
+      }
+    }
+
+    .ant-picker-body {
+      .ant-picker-cell-in-range {
+        &:before {
+          background: @theme_to;
+        }
+      }
+
+      .ant-picker-cell-range-start,
+      .ant-picker-cell-range-end {
+        &:before {
+          background: @theme_to;
+        }
+
+        .ant-picker-cell-inner {
+          background: @theme!important;
+        }
       }
     }
   }
