--- a/src/assets/styles/theme/index.less
+++ b/src/assets/styles/theme/index.less
@@ -6,10 +6,10 @@
 @import '../common/reset.less';
 @import '../common/main.less';
 
-.theme_blue {
-  @import './theme.blue.less';
+.dark {
+  @import './theme.dark.less';
 }
 
-.theme_orange {
-  @import './theme.orange.less';
+.light {
+  @import './theme.light.less';
 }
