--- a/src/assets/styles/theme/theme.dark.less
+++ b/src/assets/styles/theme/theme.dark.less
@@ -3,15 +3,6 @@
  * @date 2023-3-14
  * @author poohlaha
  */
-@font: 14px; // 正常字体
-@font_small: 12px; // 小一号字体
-@font_smaller: 10px; // 再小一号字体
-@font_large: 16px; // 大一号字体
-@font_larger: 18px; // 再大一号字体
-@font_largest: 20px; // 再再大一号字体
-@font_max_larger: 25px; // 再再再大一号字体
-@font_maximum: 50px; // 最大号字体, 一般用于显示数字
-
 // 主题
 @theme: #1989fa; // 默认主题色
 @theme_to: #e6f4ff; // 橙色选中高亮
@@ -25,6 +16,7 @@
 // 常用颜色
 @disabled: #d3d2d1; // 失效颜色
 @color: #ffffff; // 颜色
+@color_sub: #646e82;
 @color_shadow: rgba(0, 0, 0, 0.1); // shadow color
 @color_gray: #666666; // 正常灰色字体
 @color_gray_light: #999999; // 灰色, 一般用于未选中 tab 等
@@ -46,28 +38,21 @@
 @background_answer: #424545;
 @background_gay: #424545;
 @background_theme: linear-gradient(96deg, #1989fa 0%, #8fc3f8 100%);
+@background_login: #f7f9fc;
+@background_table_head: #f7f9fc;
 
 // 线条
 @divider: rgb(210 215 227 / 30%); // 分割线颜色
 @border: 1px solid @divider; // 线条
 @border_theme: 1px solid @theme; // 主题色线条
 @border_button_plan: 1px solid #d2d7e3; // 扁平按钮边框
-@border_radius: 8px;
+@border_radius: 20px;
 
 // 其他
 @mask: rgba(0, 0, 0, 0.5); // 遮罩层颜色
 @status: @theme; // 状态
 
 .theme(
-  @font,
-  @font_small,
-  @font_smaller,
-  @font_large,
-  @font_larger,
-  @font_largest,
-  @font_max_larger,
-  @font_maximum,
-
   // 主题
   @theme,
   @theme_to,
@@ -81,6 +66,7 @@
   // 常用颜色
   @disabled,
   @color,
+  @color_sub,
   @color_shadow,
   @color_gray,
   @color_gray_light,
@@ -100,6 +86,9 @@
   @background_card,
   @background_answer,
   @background_gay,
+  @background_theme,
+  @background_login,
+  @background_table_head,
 
   // 线条
   @divider,
