--- a/src/assets/styles/pages/home.less
+++ b/src/assets/styles/pages/home.less
@@ -1,20 +1,8 @@
 /**
- * @fileOverview home
+ * @fileOverview main
  * @date 2023-4-14
  * @author poohlaha
  */
-// navigation
-.navigation {
-  .navigation-left {
-    .logo {
-      height: 32px;
-      // width: 175px;
-    }
-  }
-}
+.main-page {
 
-.home-page {
-}
-
-.dashboard-page {
 }
