--- a/src/assets/styles/common/common.less
+++ b/src/assets/styles/common/common.less
@@ -3,17 +3,44 @@
  * @date 2025-03-15
  * @author poohlaha
  */
-/* theme */
-.theme-color {
-  color: @theme;
+
+.theme {
+  color: @theme!important;
+}
+
+.theme-hover {
+  &:hover {
+    color: @theme!important;
+  }
 }
 
 .theme-bg {
-  background: @theme;
+  background: @theme!important;
+  color: @color_theme_inner;
+}
+
+.theme-to-bg {
+  background: @theme_to!important;
+}
+
+.background-left {
+  background: @background_left;
+}
+
+.background-right {
+  background: @background_right;
+}
+
+.background-gay {
+  background: @background_gay;
 }
 
 .theme-blue-color {
   color: @theme_blue;
+}
+
+.background {
+  background: @background;
 }
 
 /* border */
@@ -37,6 +64,83 @@
   border-bottom: @border;
 }
 
+.border-theme {
+  border: @border_theme;
+}
+
+.color {
+  color: @color;
+}
+
+.color-bg {
+  color: @background;
+}
+
+.color-desc {
+  color: @color_desc;
+}
+
+.color-svg {
+  color: @color_svg;
+}
+
+.color-gray-light {
+  color: @color_gray_light;
+}
+
+.color-gray-lighter {
+  color: @color_gray_lighter;
+}
+
+.bg-menu-hover {
+  &:hover {
+    background: @color_menu_active;
+  }
+}
+
+.border-hover {
+  &:hover {
+    border: @border;
+  }
+}
+
+.word-break {
+  word-break: break-word;
+}
+
+.max-h100 {
+  max-height: 100%;
+}
+
+.folder-color {
+  color: #74cffb;
+}
+
+.bg-menu-active {
+  background: @color_menu_active;
+}
+
+.bg-card {
+  background: @background_card;
+}
+
 .red {
   color: #ed2121;
+}
+
+.disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
+.z-99 {
+  z-index: 99;
+}
+
+.z-999 {
+  z-index: 999;
+}
+
+.z-100 {
+  z-index: 100;
 }
