--- a/src/assets/styles/common/main.less
+++ b/src/assets/styles/common/main.less
@@ -7,8 +7,6 @@
   // 主题
   @theme,
   @theme_to,
-  @theme_hover,
-  @theme_active,
   @theme_orange,
   @theme_to_orange,
   @theme_blue,
@@ -17,12 +15,12 @@
   // 常用颜色
   @disabled,
   @color,
-  @color_sub,
+  @color_active,
   @color_shadow,
+  @color_theme_inner,
   @color_gray,
   @color_gray_light,
   @color_gray_lighter,
-  @color_gray_lightest,
   @color_border_gray,
   @color_normal,
   @color_button,
@@ -30,21 +28,21 @@
   @color_menu_active,
   @color_expend,
   @color_resolve,
-  @color_green,
+  @color_desc,
 
   @background,
+  @background_left,
   @background_right,
   @background_card,
-  @background_answer,
   @background_gay,
-  @background_theme,
-  @background_login,
   @background_table_head,
+  @background_theme,
 
   // 线条
   @divider,
   @border,
   @border_theme,
+  @border_active,
   @border_button_plan,
   @border_radius,
 
