--- a/src/assets/styles/common/reset.less
+++ b/src/assets/styles/common/reset.less
@@ -436,6 +436,14 @@ body {
   margin: 0 auto;
 }
 
+.color-unset() {
+  color: unset !important;
+}
+
+.background-unset() {
+  background: unset !important;
+}
+
 .font-unset() {
   font-size: unset !important;
   font-family: unset !important;
