--- a/src/assets/styles/theme/theme.dark.less
+++ b/src/assets/styles/theme/theme.dark.less
@@ -5,7 +5,7 @@
  */
 // 主题
 @theme: #252626; // 默认主题色
-@theme_to: rgba(37 38 38, 0.5); // 橙色选中高亮
+@theme_to: rgba(37, 38, 38, 0.5); // 橙色选中高亮
 @theme_orange: #fa8c16; // orange
 @theme_to_orange: rgba(255, 170, 160, 0.5); // orange
 @theme_blue: #1989fa; // blue
