--- a/src/assets/styles/theme/theme.light.less
+++ b/src/assets/styles/theme/theme.light.less
@@ -31,7 +31,7 @@
 
 // 背景
 @background: #ffffff; // 背景
-@background_left: rgb(242, 242, 243); // 左边背景
+@background_left: #ffffff; // 左边背景
 @background_right: #ffffff; // 右边背景
 @background_card: #ffffff; // 卡片背景
 @background_gay: #f2f2f2;
