--- a/src/assets/styles/common/common.less
+++ b/src/assets/styles/common/common.less
@@ -98,6 +98,14 @@
   }
 }
 
+.bg-left {
+  background: @background_left;
+}
+
+.bg-right {
+  background: @background_right;
+}
+
 .border-hover {
   &:hover {
     border: @border;
