--- a/src/assets/styles/theme/theme.light.less
+++ b/src/assets/styles/theme/theme.light.less
@@ -4,12 +4,14 @@
  * @author poohlaha
  */
 // 主题
-@theme: #1989fa; // 默认主题色
-@theme_to: #92cbf7; // 橙色选中高亮
+@theme: #9248f0; // 默认主题色
+@theme_to: #f9f0ff; // 选中高亮
+@theme_hover: #b474fc; // hover
+@theme_active: #6f32c9; // active
 @theme_orange: #fa8c16; // orange
 @theme_to_orange: rgba(255, 170, 160, 0.5); // orange
-@theme_blue: @theme; // blue
-@theme_to_blue: @theme_to; // blue
+@theme_blue: #1989fa; // blue
+@theme_to_blue: #99c1e1; // blue
 
 // 常用颜色
 @disabled: #d3d2d1; // 失效颜色
@@ -24,7 +26,7 @@
 @color_normal: #37373b; // 普通或图标下方等字体颜色
 @color_button: #ffbf47; // 按钮颜色
 @color_svg: rgb(25, 25, 26); // svg color
-@color_menu_active: #dfdfdf; // 菜单激活颜色
+@color_menu_active: #f7f7f7; // 菜单激活颜色
 @color_expend: #252626;
 @color_resolve: #24292f; // resolve color
 @color_desc: #646e82;
@@ -54,6 +56,8 @@
   // 主题
   @theme,
   @theme_to,
+  @theme_hover,
+  @theme_active,
   @theme_orange,
   @theme_to_orange,
   @theme_blue,
